--- a/src/BlazingPizza.Client/App.razor
+++ b/src/BlazingPizza.Client/App.razor
@@ -1,6 +1,6 @@
 ﻿<CascadingAuthenticationState>
-    <Router AppAssembly="typeof(Program).Assembly">
-        <Found Context="routeData">
+    <Router AppAssembly="typeof(Program).Assembly" Context="routeData">
+        <Found>
             <AuthorizeRouteView RouteData="routeData" DefaultLayout="typeof(MainLayout)">
                 <NotAuthorized>
                     <RedirectToLogin />
